--- a/index2.html
+++ b/index2.html
@@ -268,9 +268,32 @@
         <div class="col-12">
           <h3>Bize Ulasin</h3>
         </div>
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-6"  style="color: white;">
           <h5>Iletisim</h5>
-          
+          <div class="row">
+            <div class="col-5" style="text-align:right;">
+              <i class="fa fa-envelope"></i>
+            </div>
+            <div class="col-7"style="text-align:left;">
+              piwarsturkey@gmail.com
+            </div>
+          </div>
+          <div class="row pt-2">
+            <div class="col-5" style="text-align:right;">
+              <i class="fa fa-phone"></i>
+            </div>
+            <div class="col-7"style="text-align:left;">
+              (0212) 364 00 00
+            </div>
+          </div>
+          <div class="row pt-2">
+              <div class="col-5" style="text-align:right;">
+                <i class="fa fa-map-marker"></i>
+              </div>
+              <div class="col-7"style="text-align:left;">
+                  Göktürk Merkez Mahallesi, İstanbul Cd. No:3
+              </div>
+            </div>
         </div>
         <div class="col-12 col-md-6">
           <h5>Harita</h5>
@@ -279,16 +302,16 @@
       </div>
     </div>
     <div class="container-fluid">
-      <div class="row justify-content-center">
+      <div class="row justify-content-center p-0" style="text-align: center;">
         <div class="col-12 col-md-3 p-4">
           Copyright &copy 2018 Hisar CS
         </div>
-        <div class="col-12 col-md-3 p-4">
-          <a href="https://www.facebook.com/hisarcs" class="p-4"><img src="img/facebooklogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.facebook.com/hisarcs" class="p-4"><img src="img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.instagram.com/hisarcs/" class="p-4"><img src="img/instagramlogo.png" style="width: 45px; height: 45px"></a>
+        <div class="col-12 col-lg-3 col-md-4 p-4">
+          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="img/facebooklogo.png" style="width: 45px; height: 45px"></a>
+          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
+          <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="img/instagramlogo.png" style="width: 45px; height: 45px"></a>
         </div>
-        <div class="col-12 col-md-3 d-flex flex-column" style="text-align:center;">
+        <div class="col-12 col-md-2 offset-md-1 d-flex flex-column p-0" style="text-align:center;">
           <a class="back-to-top" href="#">
             <i class="fa fa-angle-up" style="font-size: 3vw;"></i><br>
             Back To Top
