--- a/index2.html
+++ b/index2.html
@@ -225,7 +225,7 @@
       <div class="row justify-content-center p-4" id="team">
         <h3 style="color:#333;">Biz Kimiz?</h3>
       </div>
-      <div class="row justify-content-center p-4">
+      <div class="row justify-content-center p-4" style="text-align:center;">
         <div class="col-12 col-md-4 p-4">
           <div class="memberCard">
             <img src="img/canersoz.jpeg" class="memberPic">
@@ -268,36 +268,36 @@
         <div class="col-12">
           <h3>Bize Ulasin</h3>
         </div>
-        <div class="col-12 col-md-6"  style="color: white;">
+        <div class="col-12 col-md-6 pb-4"  style="color: white;">
           <h5>Iletisim</h5>
-          <div class="row">
-            <div class="col-5" style="text-align:right;">
+          <div class="row justify-content-center">
+            <div class="col-1" style="text-align:right;">
               <i class="fa fa-envelope"></i>
             </div>
-            <div class="col-7"style="text-align:left;">
+            <div class="col-6"style="text-align:left;">
               piwarsturkey@gmail.com
             </div>
           </div>
-          <div class="row pt-2">
-            <div class="col-5" style="text-align:right;">
+          <div class="row pt-2 justify-content-center">
+            <div class="col-1" style="text-align:right;">
               <i class="fa fa-phone"></i>
             </div>
-            <div class="col-7"style="text-align:left;">
+            <div class="col-6"style="text-align:left;">
               (0212) 364 00 00
             </div>
           </div>
-          <div class="row pt-2">
-              <div class="col-5" style="text-align:right;">
+          <div class="row pt-2 justify-content-center">
+              <div class="col-1" style="text-align:right;">
                 <i class="fa fa-map-marker"></i>
               </div>
-              <div class="col-7"style="text-align:left;">
+              <div class="col-6"style="text-align:left;">
                   Göktürk Merkez Mahallesi, İstanbul Cd. No:3
               </div>
             </div>
         </div>
         <div class="col-12 col-md-6">
           <h5>Harita</h5>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3003.1253265148594!2d28.890556715085783!3d41.17543361707134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab2efd52f489f%3A0xe7d088ae26b38280!2sHisar+Schools+Culture+Center!5e0!3m2!1sen!2str!4v1537983310756" width="80%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3003.1253265148594!2d28.890556715085783!3d41.17543361707134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab2efd52f489f%3A0xe7d088ae26b38280!2sHisar+Schools+Culture+Center!5e0!3m2!1sen!2str!4v1537983310756" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </div>
