--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,7 @@
 
   <!-- PiWarsTurkey main stylesheet -->
   <link rel="stylesheet" href="css/style2.css">
+  <link rel="stylesheet" href="css/fontsize.css">
 
   <!-- PiWarsTurkey main script -->
   <script src="js/main.js"></script>
@@ -63,16 +64,18 @@
     </div>
   </nav>
   <div class="box">
-    <div class="background-video">
-      <video  height="100%" width="100%" autoplay="autoplay" muted="muted" loop="loop" id="myvideo">
-        <source src="img/main.mp4" type="video/mp4">
-      </video> 
-    </div>
-    <div class="bannerContainer">
-      <h5>Raspberry Pi Tabanlı Mobil Robot Yarışması</h5>
-      <h1>Pi Wars Türkiye</h1>
-      <h3>24 Mart 2019</h3>
-      <a class="btn btn-primary" href="#apply">Başvur</a>
+    <div class="video-container">
+      <div class="background-video">
+        <video  height="100%" width="100%" autoplay="autoplay" muted="muted" loop="loop" id="myvideo" style="min-height: 40vh;">
+          <source src="img/main.mp4" type="video/mp4">
+        </video> 
+      </div>
+      <div class="bannerContainer">
+        <h5>Raspberry Pi Tabanlı Mobil Robot Yarışması</h5>
+        <h1>Pi Wars Türkiye</h1>
+        <h3>24 Mart 2019</h3>
+        <a class="btn btn-primary" href="#apply">Başvur</a>
+      </div>
     </div>
   </div>
   <div class="container-fluid" style="text-align: center;">
