linked everything together

--- a/index2.html
+++ b/index2.html
@@ -186,7 +186,7 @@
           <h3 style="color:#333;">Sponsorlar</h3>
           <h5 style="color:#555;">En kısa zamanda bu sayfada açıklanacaktır.</h5>
           <br>
-          <a href="" class="btn btn-secondary">PiWars'a nasıl sponsor olabilirim?</a>
+          <a href="sponsorlar" class="btn btn-secondary">PiWars'a nasıl sponsor olabilirim?</a>
         </div>
       </div>
       <div class="row darksegment justify-content-center p-4" id="schedule">
