added logo, cok cirkin oldu

--- a/index2.html
+++ b/index2.html
@@ -36,7 +36,7 @@
 <body onload="countDown()" data-spy="scroll" data-target="#navbar" data-offset="30">
 <!-- Image and text -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="#">Pi Wars Turkey</a>
+    <a class="navbar-brand" href="#"><img src="img/logo.png" style="height: 10vh;"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
