--- a/kurallar/template.html
+++ b/kurallar/template.html
@@ -31,13 +31,13 @@
   <link rel="stylesheet" href="../css/fontsize.css">
 
   <!-- PiWarsTurkey main script -->
-  <script src="js/main.js"></script>
+  <script src="../js/main.js"></script>
 </head>
 
 <body>
   <!-- Image and text -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="#"><img src="/img/logo.png" style="height: 10vh;"></a>
+    <a class="navbar-brand" href="#"><img src="../img/logo.png" style="height: 10vh;"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -92,9 +92,9 @@
           Copyright &copy 2018 Hisar CS
         </div>
         <div class="col-12 col-lg-3 col-md-4 p-4">
-          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="img/facebooklogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="img/instagramlogo.png" style="width: 45px; height: 45px"></a>
+          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/facebooklogo.png" style="width: 45px; height: 45px"></a>
+          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="../img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
+          <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="../img/instagramlogo.png" style="width: 45px; height: 45px"></a>
         </div>
         <div class="col-12 col-md-2 offset-md-1 d-flex flex-column p-0" style="text-align:center;">
           <a class="back-to-top" href="#top">
