smaller logo, og data

--- a/kurallar/template.html
+++ b/kurallar/template.html
@@ -10,6 +10,14 @@
   <!-- SEO Meta Tags -->
   <meta name="keywords" content=""/>
 
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Pi Wars Turkey" />
+  <meta property="og:type" content="site" />
+  <meta property="og:url" content="https://piwarsturkey.com" />
+  <meta property="og:image" content="https://piwars.hisarcs.com/img/logo.png" />
+  <meta property="og:description" content="Pi Wars Turkey: The official webpage of Pi Wars Turkey" /> 
+  <meta property="og:site_name" content="Pi Wars Turkey" />
+  
   <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
