updated main page texts

--- a/index2.html
+++ b/index2.html
@@ -76,7 +76,7 @@
       <div class="bannerContainer">
         <h5>Raspberry Pi Tabanlı Mobil Robot Yarışması</h5>
         <h1>Pi Wars Türkiye</h1>
-        <h3>24 Mart 2019</h3>
+        <h3>23 Mart 2019</h3>
         <a class="btn btn-primary" href="#apply">Başvur</a>
       </div>
     </div>
@@ -109,18 +109,18 @@
       <div class="col-12 col-md-4 info">
         <img src="img/piwarsturkey.png" class="texticon">
         <h5>PiWars Türkiye</h5>
-        <p class="p-4" style="color:#fff;">Hisar CS takımı PiWars etkinliğini İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 24 Mart 2019 tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır. Yarışmaya katılmak için Başvur kısmındaki formu doldurmanız gerekmektedir.</p>
+        <p class="p-4" style="color:#fff;">Hisar CS takımı PiWars'u İstanbul’a getirerek Türkiye'deki ilk PiWars etkinliğini düzenleyecektir. Yarışma 23 Mart 2019 tarihinde Hisar Okulları lise binasında gerçekleşecek ve Türkiye çevresinden bütün liselerin katılımına açık olacaktır. Ayrıca 22 Mart günü deneme maçları gerçekleşecektir. </p>
       </div>
       <div class="col-12 col-md-4 info">
         <img src="img/education.png" class="texticon">
         <h5>Eğitim</h5>
-        <p class="p-4" style="color:#fff;">PiWars Türkiye etkinliği, yarışmanın yanı sıra bir de eğitim içerecektir. 2 gün sürecek olan eğitimde, yeterli imkanları olmayan okullardan gelen öğrencilere gerekli malzeme sağlanacak ve kendi robotlarını yapmalarına yardım edilecektir. Eğitime katılan takımlar daha sonra yaptıkları robotlarla yarışmaya katılacaktır.</p>
+        <p class="p-4" style="color:#fff;">8-9 Şubat tarihlerinde bir Pi Wars eğitimi gerçekleşecektir. Bu eğitimde takımlara programlama, 3d tasarım ve temel elektronik dersleri verilecektir. Ayrıca eğitimde kendi robotlarını yapmak için yeterli maddi imkana sahip olmayan okullara robot kitleri dağıtılacak ve bu takımların da yarışmaya katılmaları amaçlanacaktır.</p>
       </div>
     </div>
     <div class="row p-4 justify-content-center">
       <div class="col-12 col-md-6">
-        <h3 style="color:#333;">Yarışmalar</h3>
-        <p>PiWars etkinliğinde hem otonom hem de uzaktan kumandalı görever bulunur. PiWars Türkiye etkinliği için seçtiğimiz görevleri ve kurallarını aşağıda görebilirsiniz.</p>
+        <h3 style="color:#333;">Görevler</h3>
+        <p>PiWars etkinliğinde hem otonom hem de uzaktan kumandalı görever yer alır. Görevler ve kurallarına aşağıdan ulaşabilirsiniz.</p>
         <a href="kurallar/genel.html" target="_blank" rel="nofollow" class="btn btn-primary">Genel Kurallar ve kısıtlamalar</a> <!-- Genel kuralların yazılması gerekilen site -->
       </div>
     </div>
@@ -140,7 +140,7 @@
         <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/obstaclecourse2.png"></div>
         <div class="col-12 col-md-7">
           <h4>Obstacle Course</h4>
-          <p>Obstacle course'ta robotunuz engebeli bir parkurdan geçmeye çalışır. Bu parkuru en kısa zamanda tamamlayan en çok puan kazanır.</p>
+          <p>Obstacle Course'ta robotunuz bir engebeli bir parkuru tamamlamaya çalışır. Parkuru en hızlı tamamlayabilen robot en çok puan kazanır.</p>
           <a href="kurallar/obstacle.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
         </div>
       </div>
@@ -149,7 +149,7 @@
         <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/duckshoot2.png"></div>
         <div class="col-12 col-md-7">
           <h4>Duck Shoot</h4>
-          <p>Duck Shoot, karşınızdaki hedefleri bir fırlatma mekanizmasıyla vurduğunuz veya yerdeki bir topu iterek hedefleri devirmeye çalıştığınız bir yarışmadır.</p>
+          <p>Duck Shoot, karşınızdaki hedefleri bir fırlatma mekanizmasıyla vurduğunuz veya yerdeki bir topu iterek hedefleri devirmeye çalıştığınız bir görevdir.</p>
           <a href="kurallar/duck.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
         </div>
       </div>
@@ -158,7 +158,7 @@
         <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/proxalert.png"></div>
         <div class="col-12 col-md-7">
           <h4>Proximity Alert</h4>
-          <p>Proximity alert otonom bir görevdir, bir duvara 0.5 metre uzaklıktaki robotunuz, üzerindeki sensörlerle bu duvara çarpmadan olabildiğince yaklaşmaya çalışır.</p>
+          <p>Proximity alert görevinde robotunuz otonom bir şekilde bir duvara, çarpmadan, olabildiğince yaklaşmaya çalışır.</p>
           <a href="kurallar/proximity.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
         </div>
       </div>
@@ -167,7 +167,7 @@
         <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/linefollowing2.png"></div>
         <div class="col-12 col-md-7">
           <h4>Maze</h4>
-          <p>Maze görevinde, robotunuz bir labirenti otonom bir şekilde en kısa sürede çözmeye çalışır.</p>
+          <p>Maze görevinde robotunuz bir labirenti otonom bir şekilde en kısa sürede çözmeye çalışır.</p>
           <a href="kurallar/maze.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
         </div>
       </div>
@@ -197,7 +197,7 @@
       <div class="row justify-content-center p-4" id="register">
         <div class="col-12 col-md-8">
           <h3 style="color:#333;">Başvur</h3><br>
-          <p>PiWars 2019 başvuru formlarına aşağıdan ulaşabilirsiniz. Eğitime katılmak isteyenlerin yarışmaya da katılmaları beklendiği için sadece eğitim formunu doldurmaları yeterlidir. Görevli öğretmen de dahil olmak üzere her takım üyesi için bir form doldurmanız gerektiğini hatırlatmak isteriz. </p>
+          <p>PiWars 2019 başvuru formlarına aşağıdan ulaşabilirsiniz. Görevli öğretmen de dahil olmak üzere her takım üyesi için bir form doldurmanız gerektiğini hatırlatmak isteriz. </p>
           <br>
           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScvWsnPJu7egl1QsA0kZbykoSGZTrN2w9gdX5ZRsI_WY6awmg/viewform?embedded=true" width="100%;" max-width="100%" height="450" frameborder="0" max-height="450" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
@@ -206,25 +206,35 @@
       <div class="row darksegment justify-content-center p-4" style="text-align: left;" id="faq">
         <h3 style="text-align:center;" class="col-12 p-4">Sıkça Sorulan Sorular</h3>
         <div class="col-12 col-md-3 mt-4">
-          <h6>Eğitime hangi öğrencilerin katılması tavsiye edilmektedir?</h6>
+          <h6>Eğitime katılmak zorunlu mudur?</h6>
           <hr style="border-color: #666;">
-          <p style="color:#eee;">Eğitime sadece kendi robotlarını yapmak için yeterli imkana sahip olmayan okulların başvurması teşvik edilmektedir.</p>
+          <p style="color:#eee;">Eğitime katılmak zorunlu değildir ancak her takım için tavsiye edilmektedir.</p>
         </div>
         <div class="col-12 col-md-3 mt-4">
-          <h6>Eğitime katılmak için önceden bir robotik tecrübesine ihtiyaç var mı?</h6>
+          <h6>Kimlere robot kiti verilecektir?</h6>
           <hr style="border-color: #666;">
-          <p style=" color:#eee;">Hayır, eğitimdeki herkesin hiçbir şey bilmediği varsayılacaktır.</p>
+          <p style=" color:#eee;">Elimizde 12 adet robot kiti bulunmaktadır. Sadece gerçekten desteğe ihtiyacı olan takımlara robot kiti dağıtılacaktır. Diğer takımlara ise eğitim süresinde kullanmaları için malzemeler sağlanacaktır.</p>
         </div>
         <div class="col-12 col-md-3 mt-4">
-          <h6>Eğitime katılan takımlar kaçar kişiden oluşmalıdır?</h6>
+          <h6>Takımlar kaçar kişiden oluşmalıdır?</h6>
           <hr style="border-color: #666;">
-          <p style="color:#eee;">Bir takımın 3 kişiden oluşması hedeflenmektedir.</p>
+          <p style="color:#eee;">Üçer kişiden oluşan takımlar tavsiye edilmektedir. </p>
         </div>
         <div class="col-12 col-md-3 mt-4">
-          <h6>Eğitime katılmadan sadece yarışmaya katılabilir miyim?</h6>
+          <h6>Deneme maçlarına katılmak zorunlu mudur?</h6>
           <hr style="border-color: #666;">
-          <p style="color:#eee;">Tabi ki!</p>
+          <p style="color:#eee;">Hayır, o gün gelmeyebilir veya gelip robotunuz üzerinde çalışabilirsiniz</p>
         </div>
+		<div class="col-12 col-md-3 mt-4">
+		  <h6>Eğitimden sonra katılan takımlara bir destek sağlanacak mıdır?</h6>
+		  <hr style="border-color: #666;">
+		  <p style="color:#eee;">Evet, mentorlarımız takımlar ile iletişimde olacak ve takımlar okulumuzdaki 3d printer ve laser cutter gibi imkanlardan faydalanabileceklerdir.</p>
+		</div>
+		<div class="col-12 col-md-3 mt-4">
+		  <h6>Bir katılım ücreti var mıdır?</h6>
+		  <hr style="border-color: #666;">
+		  <p style="color:#eee;">Hayır, bütün etkinlik ücretsiz olacaktır.</p>
+		</div>
       </div>
     </div>
     <div class="container">
