--- a/index2.html
+++ b/index2.html
@@ -189,9 +189,85 @@
           <a href="sponsorlar" class="btn btn-secondary">PiWars'a nasıl sponsor olabilirim?</a>
         </div>
       </div>
-      <div class="row darksegment justify-content-center p-4" id="schedule">
+      <div class="row darksegment justify-content-center p-4" id="schedule" >
         <div class="col-12">
-          <img src="img/PiWarsSchedule.png" style="width:80%;">
+          <h3>Ajanda</h3>
+          <hr style="border-color:#aaa;">
+        </div>
+        <div class="col-12">
+          <h4 style="color:white;" class="pt-4">Egitim</h4>
+          <hr style="border-color:#666;">
+          <div class="row">
+            <div class="col-12 col-lg-6">
+              <h5>8 Subat Cuma</h5>
+              <hr style="border-color:#666;">
+              <ul style="list-style:none; text-align:left; color: #eee;">
+                <li>08:30 - 09:00    &emsp;    Acilis</li>
+                <li>09:00 - 09:50    &emsp;    Raspberry Pi'a Giris</li>
+                <li>09:50 - 10:00    &emsp;    Ara</li>
+                <li>10:00 - 10:50    &emsp;    Programlamaya Giris</li>
+                <li>10:50 - 11:00    &emsp;    Ara</li>
+                <li>11:00 - 11:50    &emsp;    Programlamaya Giris</li>
+                <li>11:50 - 12:00    &emsp;    Ara</li>
+                <li>12:00 - 12:50    &emsp;    Raspberry Pi ile Temel Elektronik</li>
+                <li>12:50 - 13:30    &emsp;    Yemek</li>
+                <li>13:30 - 14:20    &emsp;    Raspberry Pi ile Temel Elektronik</li>
+                <li>14:20 - 14:30    &emsp;    Ara</li>
+                <li>14:30 - 15:20    &emsp;    Raspberry Pi ile Temel Elektronik</li>
+                <li>15:30&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Cikis</li>
+              </ul>
+            </div>
+            <div class="col-12 col-lg-6">
+                <h5>9 Subat Cumartesi</h5>
+                <hr style="border-color:#666;">
+                <ul style="list-style:none; text-align:left; color: #eee;">
+                    <li>08:30 - 09:00    &emsp;    Karsilama</li>
+                    <li>09:00 - 09:50    &emsp;    3 Boyutlu Tasarim'a Giris</li>
+                    <li>09:50 - 10:00    &emsp;    Ara</li>
+                    <li>10:00 - 10:50    &emsp;    Robot Kiti Kurulumu</li>
+                    <li>10:50 - 11:00    &emsp;    Ara</li>
+                    <li>11:00 - 11:50    &emsp;    Robotlarin Kodlanmasi</li>
+                    <li>11:50 - 12:00    &emsp;    Ara</li>
+                    <li>12:00 - 12:50    &emsp;    Robotlarin Kodlanmasi</li>
+                    <li>12:50 - 13:30    &emsp;    Yemek</li>
+                    <li>13:30 - 14:20    &emsp;    Robotlar Uzerinde Calisma</li>
+                    <li>14:20 - 14:30    &emsp;    Ara</li>
+                    <li>14:30 - 15:10    &emsp;    Robotlarin Parkurlarda Denenmesi</li>
+                    <li>15:10 - 15:30    &emsp;    Kapanis</li>
+                    <li>15:30&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Cikis</li>
+                </ul>
+              </div>
+          </div>
+        </div>
+        <div class="col-12">
+          <h4 style="color:white;" class="pt-4">Yarisma</h4>
+          <hr style="border-color:#666;">
+          <div class="row">
+              <div class="col-12 col-lg-6">
+                <h5>23 Mart Cumartesi</h5>
+                <hr style="border-color:#666;">
+                <ul style="list-style:none; text-align:left; color: #eee;">
+                    <li>09:00 - 09:30    &emsp;    Kayitlar</li>
+                    <li>09:30 - 13:00    &emsp;    Deneme Maclari</li>
+                    <li>13:00 - 14:00    &emsp;    Yemek</li>
+                    <li>14:00 - 15:30    &emsp;    Deneme Maclari</li>
+                    <li>15:30&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Cikis</li>
+                </ul>
+              </div>
+              <div class="col-12 col-lg-6">
+                  <h5>8 Subat Cuma</h5>
+                  <hr style="border-color:#666;">
+                  <ul style="list-style:none; text-align:left; color: #eee;">
+                      <li>09:00 - 09:30    &emsp;    Kayitlar ve Yerlesme</li>
+                      <li>09:30 - 10:00    &emsp;    Acilis Seremonisi</li>
+                      <li>10:00 - 13:00    &emsp;    Maclar</li>
+                      <li>13:00 - 14:00    &emsp;    Yemek</li>
+                      <li>14:00 - 16:30    &emsp;    Maclar</li>
+                      <li>16:30 - 17:30    &emsp;    Kapanis Konusmasi ve Odul Toreni</li>
+                      <li>15:30&thinsp;&thinsp;&emsp;&emsp;&emsp;&emsp;    Cikis</li>
+                  </ul>
+                </div>
+            </div>
         </div>
       </div>
       <div class="row justify-content-center p-4" id="register">
@@ -205,36 +281,36 @@
 
       <div class="row darksegment justify-content-center p-4" style="text-align: left;" id="faq">
         <h3 style="text-align:center;" class="col-12 p-4">Sıkça Sorulan Sorular</h3>
-        <div class="col-12 col-md-3 mt-4">
+        <div class="col-12 col-md-3 m-4">
           <h6>Eğitime katılmak zorunlu mudur?</h6>
           <hr style="border-color: #666;">
           <p style="color:#eee;">Eğitime katılmak zorunlu değildir ancak her takım için tavsiye edilmektedir.</p>
         </div>
-        <div class="col-12 col-md-3 mt-4">
+        <div class="col-12 col-md-3 m-4">
           <h6>Kimlere robot kiti verilecektir?</h6>
           <hr style="border-color: #666;">
           <p style=" color:#eee;">Elimizde 12 adet robot kiti bulunmaktadır. Sadece gerçekten desteğe ihtiyacı olan takımlara robot kiti dağıtılacaktır. Diğer takımlara ise eğitim süresinde kullanmaları için malzemeler sağlanacaktır.</p>
         </div>
-        <div class="col-12 col-md-3 mt-4">
+        <div class="col-12 col-md-3 m-4">
           <h6>Takımlar kaçar kişiden oluşmalıdır?</h6>
           <hr style="border-color: #666;">
           <p style="color:#eee;">Üçer kişiden oluşan takımlar tavsiye edilmektedir. </p>
         </div>
-        <div class="col-12 col-md-3 mt-4">
+        <div class="col-12 col-md-3 m-4">
           <h6>Deneme maçlarına katılmak zorunlu mudur?</h6>
           <hr style="border-color: #666;">
           <p style="color:#eee;">Hayır, o gün gelmeyebilir veya gelip robotunuz üzerinde çalışabilirsiniz</p>
         </div>
-		<div class="col-12 col-md-3 mt-4">
-		  <h6>Eğitimden sonra katılan takımlara bir destek sağlanacak mıdır?</h6>
-		  <hr style="border-color: #666;">
-		  <p style="color:#eee;">Evet, mentorlarımız takımlar ile iletişimde olacak ve takımlar okulumuzdaki 3d printer ve laser cutter gibi imkanlardan faydalanabileceklerdir.</p>
-		</div>
-		<div class="col-12 col-md-3 mt-4">
-		  <h6>Bir katılım ücreti var mıdır?</h6>
-		  <hr style="border-color: #666;">
-		  <p style="color:#eee;">Hayır, bütün etkinlik ücretsiz olacaktır.</p>
-		</div>
+        <div class="col-12 col-md-3 m-4">
+          <h6>Eğitimden sonra katılan takımlara bir destek sağlanacak mıdır?</h6>
+          <hr style="border-color: #666;">
+          <p style="color:#eee;">Evet, mentorlarımız takımlar ile iletişimde olacak ve takımlar okulumuzdaki 3d printer ve laser cutter gibi imkanlardan faydalanabileceklerdir.</p>
+        </div>
+        <div class="col-12 col-md-3 m-4">
+          <h6>Bir katılım ücreti var mıdır?</h6>
+          <hr style="border-color: #666;">
+          <p style="color:#eee;">Hayır, bütün etkinlik ücretsiz olacaktır.</p>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -283,6 +359,7 @@
       <div class="row p-4">
         <div class="col-12">
           <h3>Bize Ulasin</h3>
+          <hr>
         </div>
         <div class="col-12 col-md-6 pb-4"  style="color: white;">
           <h5>Iletisim</h5>
