--- a/index2.html
+++ b/index2.html
@@ -114,7 +114,7 @@
       <div class="col-12 col-md-4 info">
         <img src="img/education.png" class="texticon">
         <h5>Eğitim</h5>
-        <p class="p-4" style="color:#fff;">8-9 Şubat tarihlerinde bir Pi Wars eğitimi gerçekleşecektir. Bu eğitimde takımlara programlama, 3d tasarım ve temel elektronik dersleri verilecektir. Ayrıca eğitimde kendi robotlarını yapmak için yeterli maddi imkana sahip olmayan okullara robot kitleri dağıtılacak ve bu takımların da yarışmaya katılmaları amaçlanacaktır.</p>
+        <p class="p-4" style="color:#fff;">8-9 Şubat tarihlerinde bir Pi Wars eğitimi gerçekleşecektir. Bu eğitimde takımlara programlama, 3D tasarım ve temel elektronik dersleri verilecektir. Ayrıca eğitimde kendi robotlarını yapmak için yeterli imkana sahip olmayan okullara robot kitleri dağıtılacak ve bu takımların da yarışmaya katılmaları amaçlanacaktır.</p>
       </div>
     </div>
     <div class="row p-4 justify-content-center">
@@ -131,7 +131,7 @@
         <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/deneme2.png"></div>
         <div class="col-12 col-md-7">
           <h4>PiNoon</h4>
-          <p>Pinoon, iki robotun birbirleriyle savaştığı interaktif bir yarışmadır. Amaç diğer robota bağlı balonu, kendi robotunuzdaki iğne ile patlatmaktır.  </p>
+          <p>Pinoon, iki robotun birbirleriyle savaştığı bir yarışmadır. Amaç diğer robota bağlı balonu, kendi robotunuzdaki iğne ile patlatmaktır.  </p>
           <a href="kurallar/pinoon.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
         </div>
       </div>
@@ -158,7 +158,7 @@
         <div class="col-6 col-md-1 offset-3 offset-md-2" style="text-align:center;"><img src="img/proxalert.png"></div>
         <div class="col-12 col-md-7">
           <h4>Proximity Alert</h4>
-          <p>Proximity alert görevinde robotunuz otonom bir şekilde bir duvara, çarpmadan, olabildiğince yaklaşmaya çalışır.</p>
+          <p>Proximity alert görevinde robotunuz otonom bir şekilde bir duvara çarpmadan olabildiğince yaklaşmaya çalışır.</p>
           <a href="kurallar/proximity.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
         </div>
       </div>
