--- a/index2.html
+++ b/index2.html
@@ -80,7 +80,7 @@
         <h5>Raspberry Pi Tabanlı Mobil Robot Yarışması</h5>
         <h1>Pi Wars Türkiye</h1>
         <h3>23 Mart 2019</h3>
-        <a class="btn btn-primary" href="#apply">Başvur</a>
+        <a class="btn btn-primary" href="#register">Başvur</a>
       </div>
     </div>
   </div>
