--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="col-12 col-md-7">
           <h4>Maze</h4>
           <p>Maze görevinde robotunuz bir labirenti otonom bir şekilde en kısa sürede çözmeye çalışır.</p>
-          <a href="kurallar/maze.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
+          <a href=" kurallar/maze.html" target="_blank" rel="nofollow" class="btn btn-secondary">Detaylı Bilgi ve Kurallar</a>
         </div>
       </div>
       <hr>
@@ -325,35 +325,42 @@
           <div class="memberCard">
             <img src="img/canersoz.jpeg" class="memberPic">
             <h5 style="color:#555;">Can Ersoz</h5>
-            <h6 style="color:#333;">Bos isler muduru</h6>
+            <h6 style="color:#333;">Organizatör</h6>
           </div>
         </div>
         <div class="col-12 col-md-4 p-4">
           <div class="memberCard">
-            <img src="img/canersoz.jpeg" class="memberPic">
-            <h5 style="color:#555;">Can Ersoz</h5>
-            <h6 style="color:#333;">Bos isler muduru</h6>
+            <img src="img/yoelkastro.jpeg" class="memberPic">
+            <h5 style="color:#555;">Yoel Kastro</h5>
+            <h6 style="color:#333;">Robot</h6>
           </div>
         </div>
         <div class="col-12 col-md-4 p-4">
           <div class="memberCard">
-            <img src="img/canersoz.jpeg" class="memberPic">
-            <h5 style="color:#555;">Can Ersoz</h5>
-            <h6 style="color:#333;">Bos isler muduru</h6>
+            <img src="img/batuhan.jpeg" class="memberPic">
+            <h5 style="color:#555;">Batuhan Bayraktar</h5>
+            <h6 style="color:#333;">Fusion 360 Eğitmeni</h6>
           </div>
         </div>
         <div class="col-12 col-md-4 p-4">
           <div class="memberCard">
-            <img src="img/canersoz.jpeg" class="memberPic">
-            <h5 style="color:#555;">Can Ersoz</h5>
-            <h6 style="color:#333;">Bos isler muduru</h6>
+            <img src="img/duncu.jpeg" class="memberPic">
+            <h5 style="color:#555;">Deniz Uncu</h5>
+            <h6 style="color:#333;">Business</h6>
           </div>
         </div>
         <div class="col-12 col-md-4 p-4">
           <div class="memberCard">
-            <img src="img/canersoz.jpeg" class="memberPic">
-            <h5 style="color:#555;">Can Ersoz</h5>
-            <h6 style="color:#333;">Bos isler muduru</h6>
+            <img src="img/nadintamer.jpeg" class="memberPic">
+            <h5 style="color:#555;">Nadin Tamer</h5>
+            <h6 style="color:#333;">Python Eğitmeni</h6>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 p-4">
+          <div class="memberCard">
+            <img src="img/liora.jpeg" class="memberPic">
+            <h5 style="color:#555;">Liora Nasi</h5>
+            <h6 style="color:#333;">Mentor</h6>
           </div>
         </div>
       </div>
@@ -404,7 +411,7 @@
         </div>
         <div class="col-12 col-lg-3 col-md-4 p-4">
           <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="img/facebooklogo.png" style="width: 45px; height: 45px"></a>
-          <a href="https://www.facebook.com/hisarcs" class="p-2"><img src="img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
+          <a href="https://twitter.com/hisarcs" class="p-2"><img src="img/Twitterlogo.png" style="width: 45px; height: 45px"></a>
           <a href="https://www.instagram.com/hisarcs/" class="p-2"><img src="img/instagramlogo.png" style="width: 45px; height: 45px"></a>
         </div>
         <div class="col-12 col-md-2 offset-md-1 d-flex flex-column p-0" style="text-align:center;">
